# apps/api/src/usuario/dto/redefinir-senha.dto.ts
@@ -1,0 +1,6 @@
+import { ApiProperty } from '@nestjs/swagger';
+
+export class RedefinirSenhaDto {
+  @ApiProperty()
+  senha: string;
+}
